# SpotifyRoundPhobiControllerQT

./: .gitignore  CMakeLists.txt  README.md
docs/plans/: 2026-03-03-qt-spotify-controller-design.md  2026-03-03-qt-spotify-controller.md
qml/: PlayerView.qml  SetupView.qml  main.qml
qml/components/: AlbumArt.qml  BurstEffect.qml  FeedbackOverlay.qml  ProgressRing.qml  TrackToast.qml  VinylCenter.qml  VolumeOverlay.qml
src/: main.cpp  spotifyapi.cpp  spotifyapi.h  spotifyauth.cpp  spotifyauth.h  version.rc
